--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@openzeppelin/contracts": "4.7.0"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-foundry": "^1.1.2",
     "@nomiclabs/hardhat-ethers": "^2.0.6",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@types/chai": "^4.2.6",
